src/style/style.scss
@import "reset";
@import "variables";

:root {
  background-color: $bg;
  color: #666;
  a {
    text-decoration: none;
    background: -webkit-linear-gradient(-60deg, #0000FF, #6699DD);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
}

.header {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-end;
  flex-wrap: wrap;
  box-shadow: 0 -10px 10px $shadow,
              0 -10px 10px inset $light-shadow;

  .title {
    padding: 0 1rem;
    margin: 1em;
    border-radius: 40px;
    align-self: flex-start;
    box-shadow: -5px -5px 10px $shadow,
                5px 5px 10px inset $shadow,
                5px 5px 10px $light,
                -5px -5px 10px inset $light;
  }

  h1 {
    margin: 1rem;
    background: -webkit-linear-gradient(-60deg, #333333, #0000FF);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .nav {
    margin: 3rem 1rem 1rem 1rem;
    padding: 1rem 0 1rem 1rem;
    border-radius: 40px;
    display: flex;
    flex-direction: row;
    box-shadow: -5px -5px 10px $shadow,
                5px 5px 10px inset $shadow,
                5px 5px 10px $light,
                -5px -5px 10px inset $light
  }

  a {
    font-weight: 700;
    font-size: 1.5rem;
    padding-right: 1rem;
  }
}

.main {
  padding: 1vw 5vw;
  display: flex;
  @keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }

  * {
    animation: fadeIn 2s;
  }

  h2 {
    color: #555;
  }

  @keyframes growOut {
    0% {box-shadow: 0 0 0 #0000;}
    100% {box-shadow: -10px -10px 10px $light,
                10px 10px 10px inset $light,
                10px 10px 10px $shadow,
                -10px -10px 10px inset $shadow;}
  }

  @keyframes growIn {
    0% {box-shadow: 0 0 0 inset #0000;}
    100% {box-shadow: -10px -10px 5px inset $light,
                      10px 10px 5px inset $shadow;}
  }

  @keyframes growOutNarrow {
    0% {box-shadow: 0 0 0 #0000;}
    100% {box-shadow: -10px -10px 5px $light,
                      10px 10px 5px inset $light,
                      10px 10px 5px $shadow,
                      -10px -10px 5px inset $shadow;}
  }

  .panel {
    width: 900px;
    height: 600px;
    border-radius: 3rem;
    box-shadow: -10px -10px 10px $light,
                10px 10px 10px inset $light,
                10px 10px 10px $shadow,
                -10px -10px 10px inset $shadow;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    animation: growOut 2s;

    .preview-container {
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 1rem;
      height: 20rem;
      width: 20rem;
      border-radius: 1rem;
      box-shadow: -10px -10px 5px inset $light,
                  10px 10px 5px inset $shadow;
      animation: growIn 2s;
    }



    .options {
      margin: 1rem;
      border-radius: 1rem;
      height: 30rem;
      width: 20rem;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      text-align: center;
      box-shadow: -10px -10px 5px $light,
                  10px 10px 5px inset $light,
                  10px 10px 5px $shadow,
                  -10px -10px 5px inset $shadow;
      animation: growOut 2s;

      h4 {
        margin: 0;
      }

      .sliders {
        display:flex;
        flex-direction: column;
        justify-content: center;
      }

      .css-display {
        width: 70%;
        padding: 1rem;
        margin-top: 2rem;
        border-radius: 10px;
        display:flex;
        flex-direction: column;
        justify-content: flex-start;
        text-align: left;

        background-color: #444;
        color: #BBB;
        font-size: 12px;

        p {
          margin: .1em;
        }
        o {
          color: #E19933;
        }
        b {
          color: #33BBCC;
        }
      }
    }
  }


  .sub {
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    animation: fadeIn 2s;

    .intro {
      max-width: 30rem;
      padding-right: 3vw;

      b {
        background: -webkit-linear-gradient(-60deg, #0000FF, #6699DD);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
      }
    }
  }

  .ex-container {
    display: flex;
    flex-direction: column;

    .row {
      display: flex;
      flex-wrap: wrap;
      flex-direction: row;
      animation: fadeIn ease 3s;

      .item {
        margin: 1vw;
        animation: fadeInRight ease 2s;
        position: relative;
      }

      @keyframes fadeInRight {
        0% {opacity:0; left: -2vw;}
        100% {opacity:1; left: 0;}
      }

      .description {
        font-weight: 600;
        color: #666;
      }

      .pad-top {
        padding-top: 4rem;
      }

      .example {
        width: 3rem;
        height: 3rem;
        display: flex;
        align-items: center;
        justify-content: center;
        box-shadow: 10px 10px 20px $shadow,
                  -10px -10px 20px $light;
      }

      .example:active {
        box-shadow: 5px 5px 20px $shadow,
                  -5px -5px 20px $light;
      }

      .hole {
        box-shadow: 5px 5px 10px inset $shadow,
                  -5px -5px 10px inset $light;
        display: flex;
        align-items: center;
        justify-content: center;
      }

      .led {
        height: 1rem;
        width: 1rem;
        background-color: #666;
        transition: .3s;
      }

      .led:hover {
        background-color: orange;
        box-shadow: 0 0 5px orange;
        transition: 0.5s;
      }

      .example:active {
        background: none;
        transition-duration: .9s;
      }

      .concave {
        box-shadow: 5px 5px 20px inset $shadow,
                    -5px -5px 20px inset $light,
                    10px 10px 20px $shadow,
                    -10px -10px 20px $light;
      }

      .convex {
        box-shadow: 5px 5px 20px inset $light,
                    -5px -5px 20px inset $shadow,
                    10px 10px 20px $shadow,
                    -10px -10px 20px $light;
      }

      .smaller {
        height: $smaller;
        width:$smaller;
      }

      .small {
        height: $small;
        width: $small;
      }

      .medium {
        height: $medium;
        width: $medium;
      }

      .circle-switch {
        height: $medium;
        width: $small;
        border-radius: 100% / 50%;
      }

      .big {
        height: $big;
        width: $big;
      }

      .inner {
        width: $ring;
        height: $ring;

        box-shadow: 5px 5px 20px inset $light-shadow,
                    -5px -5px 20px inset $light;
      }

      .inner-ring {
        height: $ring;
        width: $ring;
        box-shadow: 5px 5px 5px inset $light-shadow,
                    -5px -5px 5px $light-shadow,
                    5px 5px 10px $light;
      }

      .ring {
        box-shadow: 5px 5px 5px inset $light,
                    -5px -5px 5px inset $shadow,
                    10px 10px 20px $shadow,
                    -10px -10px 20px $light;
      }

      .circle {
        border-radius: 100%;
      }

      .square {
        border-radius: 20%;
      }

      .double-radius {
        border-radius: 50% / 30%;
      }

      .triangle-container {
        display:flex;
        justify-content: center;
        perspective: 20px;
        margin: 0 2.5rem;
      }

      .triangle {
        position: absolute;
        transform-style: preserve-3d;
        transform: rotateX(45deg);
        border-radius: 30% / 100% 100% 10% 10%;
      }

      .triangle:active {
        background: none;
      }

      .example-triangle {
        box-shadow: 5px 1px 10px $shadow,
                  -10px -10px 20px $light;
      }

      .switch {
        input[type="checkbox"] {
          position: absolute;
          -webkit-appearance: none;
          width: $medium;
          height: $small;
          border-style: solid;
          border-width: 5px;
          border-color: #FFF0;
          box-shadow: 5px 5px 10px inset $shadow,
                      -5px -5px 10px inset $light,
                      5px 5px 10px $shadow,
                      -5px -5px 10px $light;
        }

        input:before {
          content: "";
          position: absolute;
          margin: auto;
          top: 0;
          bottom: 0;
        }

        input:before {
          left: 0.2rem;
          height: 2rem;
          width: 2rem;
          box-shadow: 5px 5px 5px inset $light,
                      -5px -5px 5px inset $shadow,
                      3px 3px 5px $shadow,
                      -3px -3px 5px $light;
          transition: .3s;
          z-index: 9999;

        }

        input[type="checkbox"]:checked:before {
          left: 2rem;
          transition: .3s;
        }
      }

      .circle-switch {
        input[type="checkbox"] {
          border-radius: $small;
          }

        input:before {
          border-radius: 50%;
        }
      }

      .square-switch {
        input[type="checkbox"] {
          border-radius: 1rem;
          }

        input:before {
          border-radius: .5rem;
        }
      }

      .dr-switch {
        input[type="checkbox"] {
          border-radius: 50%;
          }

        input:before {
          height: 1.5rem;
          border-radius: 100%;
        }
      }
    }
  }
}

